tests/errors/double_type.stderr
error: Duplicate variant type detected
 --> tests/errors/double_type.rs:7:18
  |
7 |         LastName(String),
  |                  ^^^^^^
